samples/_failures_safe/1761665407_c24411_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e0fb8b18.c: In function ‘main’:
./samples/SAFE/__tmp_e0fb8b18.c:180:34: error: expected ‘)’ at end of input
  180 |     if (tokenizer.error_count > 0
      |        ~                         ^
      |                                  )
./samples/SAFE/__tmp_e0fb8b18.c:180:5: error: expected declaration or statement at end of input
  180 |     if (tokenizer.error_count > 0
      |     ^~
